--- a/app/src/main/res/layout/dmo_item_view.xml
+++ b/app/src/main/res/layout/dmo_item_view.xml
@@ -1,55 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:background="@android:color/white"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="100dp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="7dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="7dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteY="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        android:layout_marginLeft="37dp"
-        android:layout_marginStart="37dp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginStart="8dp" />
-
-    <ImageView
+    <View
         android:id="@+id/imageView4"
-        android:layout_width="360dp"
-        android:layout_height="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@color/colorAccent"
-        tools:layout_editor_absoluteX="0dp" />
+        android:background="#dddddd"
+         />
+
+    <TextView
+        android:id="@+id/item_name_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="第%d个列表"
+        android:textSize="14sp"
+        android:textColor="#747474"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
